--- a/Pagos/Pagos.csproj
+++ b/Pagos/Pagos.csproj
@@ -99,6 +99,10 @@
       <Project>{55ae3030-7e04-4543-937a-7101b9829dd2}</Project>
       <Name>DataManager</Name>
     </ProjectReference>
+    <ProjectReference Include="..\DataSource\DataSource.csproj">
+      <Project>{42e51e7c-cd09-4528-b6e2-5dd80ffd34f5}</Project>
+      <Name>DataSource</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Usuarios\Usuarios.csproj">
       <Project>{be4f7cbe-52ed-44ec-8990-5c721db624b8}</Project>
       <Name>Usuarios</Name>
