--- a/Biblo/Biblo.csproj
+++ b/Biblo/Biblo.csproj
@@ -127,6 +127,10 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
+    <ProjectReference Include="..\Configuraciones\Configuraciones.csproj">
+      <Project>{dc399a59-4204-4dec-8273-52f75fc8976a}</Project>
+      <Name>Configuraciones</Name>
+    </ProjectReference>
     <ProjectReference Include="..\DataSource\DataSource.csproj">
       <Project>{42e51e7c-cd09-4528-b6e2-5dd80ffd34f5}</Project>
       <Name>DataSource</Name>
