Se encriptaron las claves, se quito la opcion de editar roles y se deshabilito la opcion de resize de las filas. Se modifico la opcion de seleccionar rol a un combobox en formulario usuarioEmpleado.

--- a/Biblo/Biblo.csproj
+++ b/Biblo/Biblo.csproj
@@ -131,6 +131,10 @@
       <Project>{dc399a59-4204-4dec-8273-52f75fc8976a}</Project>
       <Name>Configuraciones</Name>
     </ProjectReference>
+    <ProjectReference Include="..\DataManager\DataManager.csproj">
+      <Project>{55ae3030-7e04-4543-937a-7101b9829dd2}</Project>
+      <Name>DataManager</Name>
+    </ProjectReference>
     <ProjectReference Include="..\DataSource\DataSource.csproj">
       <Project>{42e51e7c-cd09-4528-b6e2-5dd80ffd34f5}</Project>
       <Name>DataSource</Name>
