--- a/DataManager/DataManager.csproj
+++ b/DataManager/DataManager.csproj
@@ -54,6 +54,7 @@
   <ItemGroup>
     <Compile Include="DBConexion.cs" />
     <Compile Include="DBOperacion.cs" />
+    <Compile Include="Encriptacion.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
