--- a/Perfiles/Perfiles.csproj
+++ b/Perfiles/Perfiles.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{90C385CE-648A-4BC9-A84F-35DF00A3AB7B}</ProjectGuid>
+    <ProjectGuid>{622A9EC2-F251-4BD2-A459-FF0C10F175BB}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Libros</RootNamespace>
-    <AssemblyName>Libros</AssemblyName>
+    <RootNamespace>Perfiles</RootNamespace>
+    <AssemblyName>Perfiles</AssemblyName>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -42,80 +42,49 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CLS\Ejemplares.cs" />
-    <Compile Include="CLS\Libros.cs" />
-    <Compile Include="GUI\BuscarLibro.cs">
+    <Compile Include="GUI\CambiarClave.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="GUI\BuscarLibro.Designer.cs">
-      <DependentUpon>BuscarLibro.cs</DependentUpon>
+    <Compile Include="GUI\CambiarClave.Designer.cs">
+      <DependentUpon>CambiarClave.cs</DependentUpon>
     </Compile>
-    <Compile Include="GUI\EjemplarEdicion.cs">
+    <Compile Include="GUI\PerfilLector.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="GUI\EjemplarEdicion.Designer.cs">
-      <DependentUpon>EjemplarEdicion.cs</DependentUpon>
+    <Compile Include="GUI\PerfilLector.Designer.cs">
+      <DependentUpon>PerfilLector.cs</DependentUpon>
     </Compile>
-    <Compile Include="GUI\LibroEdicion.cs">
+    <Compile Include="GUI\PerfilEmpleado.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="GUI\LibroEdicion.Designer.cs">
-      <DependentUpon>LibroEdicion.cs</DependentUpon>
-    </Compile>
-    <Compile Include="GUI\EjemplaresGestion.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="GUI\EjemplaresGestion.Designer.cs">
-      <DependentUpon>EjemplaresGestion.cs</DependentUpon>
-    </Compile>
-    <Compile Include="GUI\LibrosGestion.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="GUI\LibrosGestion.Designer.cs">
-      <DependentUpon>LibrosGestion.cs</DependentUpon>
+    <Compile Include="GUI\PerfilEmpleado.Designer.cs">
+      <DependentUpon>PerfilEmpleado.cs</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="GUI\BuscarLibro.resx">
-      <DependentUpon>BuscarLibro.cs</DependentUpon>
+    <EmbeddedResource Include="GUI\CambiarClave.resx">
+      <DependentUpon>CambiarClave.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="GUI\EjemplarEdicion.resx">
-      <DependentUpon>EjemplarEdicion.cs</DependentUpon>
+    <EmbeddedResource Include="GUI\PerfilLector.resx">
+      <DependentUpon>PerfilLector.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="GUI\LibroEdicion.resx">
-      <DependentUpon>LibroEdicion.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="GUI\EjemplaresGestion.resx">
-      <DependentUpon>EjemplaresGestion.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="GUI\LibrosGestion.resx">
-      <DependentUpon>LibrosGestion.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Properties\Resources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    <EmbeddedResource Include="GUI\PerfilEmpleado.resx">
+      <DependentUpon>PerfilEmpleado.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
-  <ItemGroup />
   <ItemGroup>
-    <ProjectReference Include="..\DataManager\DataManager.csproj">
-      <Project>{55ae3030-7e04-4543-937a-7101b9829dd2}</Project>
-      <Name>DataManager</Name>
-    </ProjectReference>
     <ProjectReference Include="..\DataSource\DataSource.csproj">
       <Project>{42e51e7c-cd09-4528-b6e2-5dd80ffd34f5}</Project>
       <Name>DataSource</Name>
     </ProjectReference>
-    <ProjectReference Include="..\General\General.csproj">
-      <Project>{0633c326-b44d-439b-bbd4-1bc7bfd90f98}</Project>
-      <Name>General</Name>
+    <ProjectReference Include="..\SessionManager\SessionManager.csproj">
+      <Project>{d457ebfd-6d9a-4fea-be01-1b8c5ae08f6b}</Project>
+      <Name>SessionManager</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="CLS\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
