Se valido el cambio de clave y el maestro detalle de prestamos.

--- a/Perfiles/Perfiles.csproj
+++ b/Perfiles/Perfiles.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CLS\CambiarClave.cs" />
     <Compile Include="GUI\CambiarClave.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -74,6 +75,10 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\DataManager\DataManager.csproj">
+      <Project>{55ae3030-7e04-4543-937a-7101b9829dd2}</Project>
+      <Name>DataManager</Name>
+    </ProjectReference>
     <ProjectReference Include="..\DataSource\DataSource.csproj">
       <Project>{42e51e7c-cd09-4528-b6e2-5dd80ffd34f5}</Project>
       <Name>DataSource</Name>
@@ -83,9 +88,7 @@
       <Name>SessionManager</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="CLS\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
