--- a/Prestamos/Prestamos.csproj
+++ b/Prestamos/Prestamos.csproj
@@ -43,12 +43,19 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CLS\DetallesPrestamos.cs" />
+    <Compile Include="CLS\Devoluciones.cs" />
     <Compile Include="CLS\Prestamos.cs" />
     <Compile Include="GUI\misPrestamos.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="GUI\misPrestamos.Designer.cs">
       <DependentUpon>misPrestamos.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GUI\DevolucionEdicion.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\DevolucionEdicion.Designer.cs">
+      <DependentUpon>DevolucionEdicion.cs</DependentUpon>
     </Compile>
     <Compile Include="GUI\PrestamoEdicion.cs">
       <SubType>Form</SubType>
@@ -67,6 +74,12 @@
     </Compile>
     <Compile Include="GUI\Detalles_Prestamos.Designer.cs">
       <DependentUpon>Detalles_Prestamos.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GUI\DevolucionesGestion.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\DevolucionesGestion.Designer.cs">
+      <DependentUpon>DevolucionesGestion.cs</DependentUpon>
     </Compile>
     <Compile Include="GUI\PrestamosGestion.cs">
       <SubType>Form</SubType>
@@ -103,6 +116,9 @@
     <EmbeddedResource Include="GUI\misPrestamos.resx">
       <DependentUpon>misPrestamos.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="GUI\DevolucionEdicion.resx">
+      <DependentUpon>DevolucionEdicion.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="GUI\PrestamoEdicion.resx">
       <DependentUpon>PrestamoEdicion.cs</DependentUpon>
     </EmbeddedResource>
@@ -111,6 +127,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\Detalles_Prestamos.resx">
       <DependentUpon>Detalles_Prestamos.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\DevolucionesGestion.resx">
+      <DependentUpon>DevolucionesGestion.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\PrestamosGestion.resx">
       <DependentUpon>PrestamosGestion.cs</DependentUpon>
