--- a/Prestamos/Prestamos.csproj
+++ b/Prestamos/Prestamos.csproj
@@ -69,11 +69,11 @@
     <Compile Include="GUI\DetallesPrestamos.Designer.cs">
       <DependentUpon>DetallesPrestamos.cs</DependentUpon>
     </Compile>
-    <Compile Include="GUI\Detalles_Prestamos.cs">
+    <Compile Include="GUI\DetallesPrestamosVista.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="GUI\Detalles_Prestamos.Designer.cs">
-      <DependentUpon>Detalles_Prestamos.cs</DependentUpon>
+    <Compile Include="GUI\DetallesPrestamosVista.Designer.cs">
+      <DependentUpon>DetallesPrestamosVista.cs</DependentUpon>
     </Compile>
     <Compile Include="GUI\DevolucionesGestion.cs">
       <SubType>Form</SubType>
@@ -125,8 +125,8 @@
     <EmbeddedResource Include="GUI\DetallesPrestamos.resx">
       <DependentUpon>DetallesPrestamos.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="GUI\Detalles_Prestamos.resx">
-      <DependentUpon>Detalles_Prestamos.cs</DependentUpon>
+    <EmbeddedResource Include="GUI\DetallesPrestamosVista.resx">
+      <DependentUpon>DetallesPrestamosVista.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\DevolucionesGestion.resx">
       <DependentUpon>DevolucionesGestion.cs</DependentUpon>
